Actualización formato imágenes y ortografía

--- a/memoriaTFG-JavierBaosMora.tex
+++ b/memoriaTFG-JavierBaosMora.tex
@@ -74,10 +74,10 @@
 \begin{titlepage} \begin{center} %
 \begin{tabular}{cc}
 %\includegraphics[bb=0 0 194 352, scale=0.25]{logo} &
-\includegraphics[scale=0.25]{img/logo_vect}  & %
+\includegraphics[scale=0.25]{../../Downloads/MemoriaTFG-JavierBaosMora-master/img/logo_vect}  & %
 \begin{tabular}[b]{l}
-\textsf{\Huge{}{}UNIVERSIDAD}{\Huge{}{} }\tabularnewline
-\textsf{\Huge{}{}REY JUAN CARLOS}{\Huge{}{} }\tabularnewline
+\textsf{\Huge{}UNIVERSIDAD}\tabularnewline
+\textsf{\Huge{}REY JUAN CARLOS}{\Huge{} }\tabularnewline
 \end{tabular}\tabularnewline
 \end{tabular}\par \vspace{3cm}
  \par \Large GRADO EN INGENIERÍA DE SISTEMAS AUDIOVISUALES Y MULTIMEDIA\par \vspace{0.4cm}
@@ -96,12 +96,10 @@
 %%%% Para firmar
 \clearpage\pagenumbering{gobble}
 
-\chapter*{}
-
 \vspace{-4cm}
 
 \begin{center}
-\textbf{\LARGE{}{}Trabajo Fin de Grado}{\LARGE\par}
+\textbf{\LARGE{}Trabajo Fin de Grado}{\LARGE\par}
 \par\end{center}
 
 \begin{center}
@@ -109,8 +107,8 @@
 \par\end{center}
 
 \begin{center}
-{\LARGE{}{}\vspace{1cm}
- }{\large{}{}Sistema de Alerting para Arquitectura de Preventivos}{\large\par}
+{\LARGE{}\vspace{1cm}
+ }{\large{}Sistema de Alerting para Arquitectura de Preventivos}{\large\par}
 \par\end{center}
 
 \begin{center}
@@ -118,55 +116,52 @@
 \par\end{center}
 
 \begin{center}
-{\large{}{}\vspace{1cm}
- }\textbf{\large{}{}Autor :}{\large{}{} Javier Baos Mora}\\
- {\large{}{} }\textbf{\large{}{}Tutor :}{\large{}{} Dr. Gregorio
-Robles Martínez}{\large\par}
+{\large{}\vspace{1cm}
+ }\textbf{\large{}Autor :}{\large{} Javier Baos Mora}\\
+ \textbf{\large{}Tutor :}{\large{} Dr. Gregorio Robles Martínez}{\large\par}
 \par\end{center}
 
 \begin{center}
  
 \par\end{center}
 
-{\large{}{}\vspace{1cm}
+{\large{}\vspace{1cm}
  La defensa del presente Proyecto Fin de Carrera se realizó el día
 \qquad{}$\;\,$ de \qquad{}\qquad{}\qquad{}\qquad{}}\\
- {\large{}{}de 20XXI, siendo calificada por el siguiente tribunal:}{\large\par}
+ {\large{}de 2019, siendo calificada por el siguiente tribunal:}{\large\par}
 
-{\large{}{}\vspace{0.5cm}
- }\textbf{\large{}{}Presidente:}{\large\par}
+{\large{}\vspace{0.5cm}
+ }\textbf{\large{}Presidente:}{\large\par}
 
-{\large{}{}\vspace{1.2cm}
- }\textbf{\large{}{}Secretario:}{\large\par}
+{\large{}\vspace{1.2cm}
+ }\textbf{\large{}Secretario:}{\large\par}
 
-{\large{}{}\vspace{1.2cm}
- }\textbf{\large{}{}Vocal:}{\large\par}
+{\large{}\vspace{1.2cm}
+ }\textbf{\large{}Vocal:}{\large\par}
 
-{\large{}{}\vspace{1.2cm}
+{\large{}\vspace{1.2cm}
  y habiendo obtenido la siguiente calificación:}{\large\par}
 
-{\large{}{}\vspace{1cm}
- }\textbf{\large{}{}Calificación:}{\large\par}
+{\large{}\vspace{1cm}
+ }\textbf{\large{}Calificación:}{\large\par}
 
-{\large{}{}\vspace{1cm}
+{\large{}\vspace{1cm}
  }{\large\par}
 
  
 \begin{flushright}
-{\large{}{}Fuenlabrada, a \qquad{}$\;\,$ de \qquad{}\qquad{}\qquad{}\qquad{}de
-20XXI }{\large\par}
+{\large{}Fuenlabrada, a \qquad{}$\;\,$ de \qquad{}\qquad{}\qquad{}\qquad{}de
+2019 }{\large\par}
 \par\end{flushright}
 
 \begin{flushright}
  
 \par\end{flushright}
 
-{\large{}{}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+{\large{}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% Dedicatoria}{\large\par}}{\large\par}
 
-\chapter*{}
-
-{\large{}{}\pagenumbering{Roman} % para comenzar la numeracion de paginas en numeros romanos
+{\large{}\pagenumbering{Roman} % para comenzar la numeracion de paginas en numeros romanos
 }{\large\par}
 
 {\large{} }{\large\par}
@@ -367,7 +362,7 @@ por excelencia.}{\large\par}
 
 {\large{}{}\label{sec:estructura}}{\large\par}
 
-{\large{}{}En esta sección se introduce la esctructura de la memoria:}{\large\par}
+{\large{}{}En esta sección se introduce la estructura de la memoria:}{\large\par}
 
 {\large{} }{\large\par}
 \begin{itemize}
@@ -483,10 +478,10 @@ cronología, dividida en semanas, compaginando trabajo y TFG han sido
 necesarios fines de semana para realizar los hitos en las fechas establecidas
 al inicio del mismo:}{\large\par}
 
-{\large{}{} }
+{\large{}}
 \begin{figure}
 {\large{}{}\centering \includegraphics[width=12cm]{img/img32-Cronologia}
-\caption{Cronologia}
+\caption{Cronología}
 \label{fig:Cronologia-1}}
 \end{figure}
 {\large\par}
@@ -554,7 +549,7 @@ gráficos y paneles.}{\large\par}
 \end{itemize}
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img01-EstructuraGraphite}
+{\large{}{}\centering \includegraphics[scale=0.55]{img/img01-EstructuraGraphite}
 \caption{Estructura Graphite}
 \label{figura:Estructura_Graphite} }
 \end{figure}
@@ -572,16 +567,15 @@ bases de datos de time-series como Graphite o InfluxDB.}{\large\par}
 
 {\large{}{}Es una herramienta multiplataforma sin ninguna dependencia.
 Está escrito en lenguaje Go y tiene un HTTP API completo. Ofrece al
-usuario multitud de posibilidades de forma muy intiutiva.}{\large\par}
+usuario multitud de posibilidades de forma muy intuitiva.}{\large\par}
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img02-AspectoGrafana}
+{\large{}{}\centering \includegraphics[scale=0.75]{img/img02-AspectoGrafana}
 \caption{Aspecto Grafana}
 \label{figura:Aspecto_Grafana} }
 \end{figure}
 {\large\par}
-
 
 \section{Django}
 
@@ -628,7 +622,7 @@ desarrollar características adicionales.}{\large\par}
 \end{itemize}
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img03-EsquemaInternoDjango}
+{\large{}{}\centering \includegraphics[scale=0.65]{img/img03-EsquemaInternoDjango}
 \caption{Esquema interno Django}
 \label{figura:Esquema_Interno_Django} }
 \end{figure}
@@ -663,7 +657,7 @@ permite varios estilos:}{\large\par}
 \end{itemize}
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img04-CodigoPython}
+{\large{}{}\centering \includegraphics[scale=0.8]{img/img04-CodigoPython}
 \caption{Ejemplo código python}
 \label{figura:Ejemplo_Codigo_Python} }
 \end{figure}
@@ -695,7 +689,7 @@ que las sentencias van descargándose junto con el código HTML.}{\large\par}
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img05-CodigoJavascript}
+{\large{}{}\centering \includegraphics[scale=0.8]{img/img05-CodigoJavascript}
 \caption{Ejemplo código Javascript}
 \label{figura:Ejemplo_Codigo_Javascript} }
 \end{figure}
@@ -733,8 +727,8 @@ como imágenes.}{\large\par}
 \end{itemize}
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img06-EstructuraSemanticaHTML5}
-\caption{Estructura semantica HTML5}
+{\large{}{}\centering \includegraphics[scale=0.75]{img/img06-EstructuraSemanticaHTML5}
+\caption{Estructura semántica HTML5}
 \label{figura:Estructura_Semantica_HTML5} }
 \end{figure}
 {\large\par}
@@ -764,7 +758,7 @@ y asignadas a las reglas.}{\large\par}
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img07-FormatoReglaCSS}
+{\large{}{}\centering \includegraphics[scale=0.85]{img/img07-FormatoReglaCSS}
 \caption{Formato reglas CSS}
 \label{figura:Formato_Regla_CSS} }
 \end{figure}
@@ -817,7 +811,7 @@ generalmente es llamado la implementación de esa API.}{\large\par}
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img09-ConexionesAPI}
+{\large{}{}\centering \includegraphics[scale=0.85]{img/img09-ConexionesAPI}
 \caption{Ejemplo de conexiones API}
 \label{figura:Conexiones_API} }
 \end{figure}
@@ -847,7 +841,7 @@ front-end.}{\large\par}
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img10-PlantillaBootstrap}
+{\large{}{}\centering \includegraphics[scale=0.75]{img/img10-PlantillaBootstrap}
 \caption{Plantilla Bootstrap}
 \label{figura:Plantilla_Bootstrap} }
 \end{figure}
@@ -1000,29 +994,29 @@ InfluxDB, Graphite y Prometheus.}{\large\par}
 {\large{}\centering{}{}}%
 \begin{tabular}{|c|c|c|c|c|}
 \hline 
- & {\large{}{}Elastichsearch } & {\large{}{}InfluxDB } & {\large{}{}Graphite } & {\large{}{}Prometheus}\tabularnewline
+ & {\small{}{}Elastichsearch } & {\small{}{}InfluxDB } & {\small{}{}Graphite } & {\small{}{}Prometheus}\tabularnewline
 \hline 
-{\large{}{}Licencias } & {\large{}{}Open Source } & {\large{}{}Open Source } & {\large{}{}Open Source } & {\large{}{}Open Source}\tabularnewline
+{\small{}{}Licencias } & {\small{}{}Open Source } & {\small{}{}Open Source } & {\small{}{}Open Source } & {\small{}{}Open Source}\tabularnewline
 \hline 
-{\large{}{}Intrusivo } & {\large{}{}Posibilidad de instalar agentes } & {\large{}{}No } & {\large{}{}No } & {\large{}{}Necesidad de instalar agente}\tabularnewline
+{\small{}{}Intrusivo } & {\small{}{}Posibilidad de instalar agentes } & {\small{}{}No } & {\small{}{}No } & {\small{}{}Necesidad de instalar agente}\tabularnewline
 \hline 
-{\large{}{}Escalabilidad } & {\large{}{}Si } & {\large{}{}Si } & {\large{}{}Si } & {\large{}{}Si}\tabularnewline
+{\small{}{}Escalabilidad } & {\small{}{}Si } & {\small{}{}Si } & {\small{}{}Si } & {\small{}{}Si}\tabularnewline
 \hline 
-{\large{}{}Tecnologías } & {\large{}{}Lucene, Java } & {\large{}{}Go, TSM } & {\large{}{}Python } & {\large{}{}Go}\tabularnewline
+{\small{}{}Tecnologías } & {\small{}{}Lucene, Java } & {\small{}{}Go, TSM } & {\small{}{}Python } & {\small{}{}Go}\tabularnewline
 \hline 
-{\large{}{}APIs y otros métodos de acceso } & {\large{}{}RESTful APIs, JSON API } & {\large{}{}HTTP API, JSON over UDP } & {\large{}{}HTTP API, JSON over UDP } & {\large{}{}RESTful, HTTP/JSON API}\tabularnewline
+{\small{}{}APIs y otros métodos de acceso } & {\small{}{}RESTful APIs, JSON API } & {\small{}{}HTTP API, JSON over UDP } & {\small{}{}HTTP API, JSON over UDP } & {\small{}{}RESTful, HTTP/JSON API}\tabularnewline
 \hline 
-{\large{}{}Formato de datos } & {\large{}{}Logs, Time-Series } & {\large{}{}Time-Series } & {\large{}{}Time-Series } & {\large{}{}Time-Series}\tabularnewline
+{\small{}{}Formato de datos } & {\small{}{}Logs, Time-Series } & {\small{}{}Time-Series } & {\small{}{}Time-Series } & {\small{}{}Time-Series}\tabularnewline
 \hline 
-{\large{}{}Métodos de particionamiento } & {\large{}{}Sharding } & {\large{}{}Sharding } & {\large{}{}- } & {\large{}{}Sharding}\tabularnewline
+{\small{}{}Métodos de particionamiento } & {\small{}{}Sharding } & {\small{}{}Sharding } & {\small{}{}- } & {\small{}{}Sharding}\tabularnewline
 \hline 
-{\large{}{}Métodos de replicación } & {\large{}{}Factor de replicación seleccionable } & {\large{}{}Factor de replicación seleccionable } & {\large{}{}- } & {\large{}{}Si}\tabularnewline
+{\small{}{}Métodos de replicación } & {\small{}{}Factor de replicación seleccionable } & {\small{}{}Factor de replicación seleccionable } & {\small{}{}- } & {\small{}{}Si}\tabularnewline
 \hline 
-{\large{}{}Cumple performance de ingesta } & {\large{}{}Si } & {\large{}{}Si } & {\large{}{}Si } & {\large{}{}Si}\tabularnewline
+{\small{}{}Cumple performance de ingesta } & {\small{}{}Si } & {\small{}{}Si } & {\small{}{}Si } & {\small{}{}Si}\tabularnewline
 \hline 
-{\large{}{}Conocimiento interno de la herramienta } & {\large{}{}- } & {\large{}{}- } & {\large{}{}Alto } & {\large{}{}-}\tabularnewline
+{\small{}{}Conocimiento interno de la herramienta } & {\small{}{}- } & {\small{}{}- } & {\small{}{}Alto } & {\small{}{}-}\tabularnewline
 \hline 
-{\large{}{}Soporte } & {\large{}{}Si } & {\large{}{}Si } & {\large{}{}No } & {\large{}{}No}\tabularnewline
+{\small{}{}Soporte } & {\small{}{}Si } & {\small{}{}Si } & {\small{}{}No } & {\small{}{}No}\tabularnewline
 \hline 
 \end{tabular}{\large{}{}\label{tabla:Comparativa_Almacenamiento} \caption{Comparativa Solución Almacenamiento}
  }
@@ -1052,15 +1046,15 @@ y Grafana.}{\large\par}
 {\large{}\centering{}{}}%
 \begin{tabular}{|c|c|c|c|}
 \hline 
- & {\large{}{}Grafana } & {\large{}{}Prometheus } & {\large{}{}Graphite}\tabularnewline
+ & {\small{}{}Grafana } & {\small{}{}Prometheus } & {\small{}{}Graphite}\tabularnewline
 \hline 
-{\large{}{}Compatibilidad con Graphite } & {\large{}{}Si } & {\large{}{}Si } & {\large{}{}Si}\tabularnewline
+{\small{}{}Compatibilidad con Graphite } & {\small{}{}Si } & {\small{}{}Si } & {\small{}{}Si}\tabularnewline
 \hline 
-{\large{}{}Aspecto } & {\large{}{}Sobresaliente } & {\large{}{}Notable } & {\large{}{}Pobre}\tabularnewline
+{\small{}{}Aspecto } & {\small{}{}Sobresaliente } & {\small{}{}Notable } & {\small{}{}Pobre}\tabularnewline
 \hline 
-{\large{}{}Plugins } & {\large{}{}Amplio abanico } & {\large{}{}Amplio abanico } & {\large{}{}Pobre}\tabularnewline
+{\small{}{}Plugins } & {\small{}{}Amplio abanico } & {\small{}{}Amplio abanico } & {\small{}{}Pobre}\tabularnewline
 \hline 
-{\large{}{}Configuración ``user friendly'' } & {\large{}{}Si } & {\large{}{}No } & {\large{}{}No}\tabularnewline
+{\small{}{}Configuración ``user friendly'' } & {\small{}{}Si } & {\small{}{}No } & {\small{}{}No}\tabularnewline
 \hline 
 \end{tabular}{\large{}{}\label{tabla:Comparativa_Visualizacion} \caption{Comparativa Solución Capa Visualización}
  }
@@ -1085,7 +1079,7 @@ de la solución:}{\large\par}
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=9cm]{img/img13-Arquitectura}
+{\large{}{}\centering \includegraphics[width=12cm]{img/img13-Arquitectura}
 \caption{Arquitectura}
 \label{fig:Arquitectura} }
 \end{figure}
@@ -1109,7 +1103,7 @@ el valor deseado en los whisper.}{\large\par}
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=9cm]{img/img14-ClaseCarbon}
+{\large{}{}\centering \includegraphics[scale=0.85]{img/img14-ClaseCarbon}
 \caption{Clase Carbon}
 \label{fig:ClaseCarbon} }
 \end{figure}
@@ -1127,8 +1121,8 @@ de forma sencilla una vez abierta la conectividad entre los servidores.}{\large\
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=9cm]{img/img15-ConfGraphGrafana}
-\caption{Configuracion Graphite en Grafana}
+{\large{}{}\centering \includegraphics[scale=0.85]{img/img15-ConfGraphGrafana}
+\caption{Configuración Graphite en Grafana}
 \label{fig:Configuracion_Graphite_Grafana} }
 \end{figure}
 {\large\par}
@@ -1156,7 +1150,7 @@ en una base de datos MYSQL (models django) con la siguiente estructura:}{\large\
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=9cm]{img/img16-EstructuraBBDD}
+{\large{}{}\centering \includegraphics{img/img16-EstructuraBBDD}
 \caption{Estructura Base de Datos}
 \label{fig:Estructura_BBDD} }
 \end{figure}
@@ -1195,7 +1189,7 @@ Donde se almacenan los ajustes de cada template.}{\large\par}
 \end{itemize}
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=9cm]{img/img17-modelsDjango}
+{\large{}{}\centering \includegraphics{img/img17-modelsDjango}
 \caption{Models Django}
 \label{fig:Models_Django} }
 \end{figure}
@@ -1250,7 +1244,7 @@ un enlace y sus posibles extensiones, asociado a su vista correspondiente.}{\lar
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img19-urls}
+{\large{}{}\centering \includegraphics[scale=0.5]{C:/Users/jbaosmor/Desktop/MemoriaTFG-JavierBaosMora-master/img/img19-urls}
 \caption{urls.py}
 \label{fig:urls.py} }
 \end{figure}
@@ -1270,7 +1264,7 @@ un error 404.}{\large\par}
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img20-dashboard}
+{\large{}{}\centering \includegraphics[scale=0.45]{img/img20-dashboard}
 \caption{Dashboard}
 \label{fig:dashboard} }
 \end{figure}
@@ -1289,7 +1283,7 @@ deseados para alarmas warning, major y critical.}{\large\par}
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img21-NuevaMetricaSeleccionDash}
+{\large{}{}\centering \includegraphics[scale=0.55]{img/img21-NuevaMetricaSeleccionDash}
 \caption{Selección Dashboard}
 \label{fig:Nueva_Metrica_Seleccion_Dashboard} }
 \end{figure}
@@ -1297,23 +1291,23 @@ deseados para alarmas warning, major y critical.}{\large\par}
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img22-NuevaMetricaSeleccionPanel}
-\caption{Seleccion Panel}
+{\large{}{}\centering \includegraphics[scale=0.55]{img/img22-NuevaMetricaSeleccionPanel}
+\caption{Selección Panel}
 \label{fig:Nueva_Metrica_Seleccion_Panel} }
 \end{figure}
 {\large\par}
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img23-NuevaMetricaSeleccionMetrica}
-\caption{Seleccion Metrica}
+{\large{}{}\centering \includegraphics[scale=0.45]{img/img23-NuevaMetricaSeleccionMetrica}
+\caption{Selección Metrica}
 \label{fig:Nueva_Metrica_Seleccion_Metrica} }
 \end{figure}
 {\large\par}
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img24-NuevaMetricaComboUmbrales}
+{\large{}{}\centering \includegraphics[scale=0.65]{img/img24-NuevaMetricaComboUmbrales}
 \caption{Combo Umbrales}
 \label{fig:Nueva_Metrica_Combo_Umbrales} }
 \end{figure}
@@ -1328,7 +1322,7 @@ de la misma (círculo rojo con x).}{\large\par}
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img25-ListadoMetricas}
+{\large{}{}\centering \includegraphics[scale=0.45]{img/img25-ListadoMetricas}
 \caption{Listado métricas configuradas}
 \label{fig:Listado_Metricas} }
 \end{figure}
@@ -1343,7 +1337,7 @@ y configuraríamos los parámetros.}{\large\par}
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img26-Templates}
+{\large{}{}\centering \includegraphics[scale=0.45]{img/img26-Templates}
 \caption{Vista principal templates}
 \label{fig:Templates} }
 \end{figure}
@@ -1351,7 +1345,7 @@ y configuraríamos los parámetros.}{\large\par}
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img27-TemplatesCombo}
+{\large{}{}\centering \includegraphics[scale=0.65]{img/img27-TemplatesCombo}
 \caption{Combo parámetros templates}
 \label{fig:Templates_Combo_Parametros} }
 \end{figure}
@@ -1361,9 +1355,9 @@ y configuraríamos los parámetros.}{\large\par}
 en ella se listan las alarmas permitiendo seleccionar las siguientes
 opciones para cada una de ellas: }{\large\par}
 \begin{itemize}
-\item {\large{}Envio SMS: True o False. Seleccionas si deseamos alertas
+\item {\large{}Envío SMS: True o False. Seleccionas si deseamos alertas
 a través de SMS. }{\large\par}
-\item {\large{}Envio OVO: True o False. Seleccionas si deseamos alertas
+\item {\large{}Envío OVO: True o False. Seleccionas si deseamos alertas
 a través de OVO (Herramienta interna). }{\large\par}
 \item {\large{}Checks alerta: número de veces que tiene que sobrepasar un
 valor el umbral para que la métrica sea alarmada. }{\large\par}
@@ -1374,9 +1368,9 @@ el umbral para que la métrica sea cesada. }{\large\par}
 \item {\large{}Margen OK (\%): porcentaje del umbral para garantizar el
 OK. }{\large\par}
 \end{itemize}
-{\large{}{} }
+{\large{}}
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img28-ConfigurarAlarmas}
+{\large{}{}\centering \includegraphics[scale=0.45]{img/img28-ConfigurarAlarmas}
 \caption{Vista del configurador de alarmas}
 \label{fig:Configurar_Alarmas} }
 \end{figure}
@@ -1390,7 +1384,7 @@ y fecha y hora de fin de la alarma.}{\large\par}
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img29-HistoricoAlarmas}
+{\large{}{}\centering \includegraphics[scale=0.45]{img/img29-HistoricoAlarmas}
 \caption{Vista de histórico alarmas}
 \label{fig:Historico_Alarmas} }
 \end{figure}
@@ -1432,15 +1426,13 @@ la opción ``periodo diurno'' en la configuración de la alarma.}{\large\par}
 telefónica o números.}{\large\par}
 
 \item {\large{}{}Teléfonos o lista: rellenar teléfono o listado.}{\large\par}
-
-{\large{} }{\large\par}
 \end{itemize}
 {\large{}{}Cada uno de los formularios mostrados en las vistas previas
 forma parte de una clase en el }\textit{\large{}forms.py}{\large{}.}{\large\par}
 
 {\large{}{} }
 \begin{figure}
-{\large{}{}\centering \includegraphics[width=12cm]{img/img31-Forms}
+{\large{}{}\centering \includegraphics[scale=0.5]{img/img31-Forms}
 \caption{forms.py}
 \label{fig:Forms} }
 \end{figure}
@@ -1527,8 +1519,8 @@ del proyecto, el lenguaje de programación Python y el framework Django.}{\large\
 \item {\large{}{}Sistemas Telemáticos para Medios Audiovisuales: Esta asignatura
 completó la formación básica en el campo de las redes de ordenadores,
 las competencias y conocimientos adquiridos en Arquitectura de Internet,
-los refuerzó y completó. En sus contenidos se incluye el estudio de
-los dispositivos de interconexión de redes, los protocolos de encaminamiento
+los reforzó y completó. En sus contenidos se incluye el estudio de
+los dispositivos de interconexion de redes, los protocolos de encaminamiento
 y la seguridad en redes de ordenadores empleados en el proyecto.}{\large\par}
 \end{enumerate}
 
@@ -1601,21 +1593,12 @@ mas potentes.}{\large\par}
 %dummy comment inserted by tex2lyx to ensure that this paragraph is not empty
 }{\large\par}
 
-\chapter{Manual de usuario}
-
-{\large{}{}\label{app:manual}}{\large\par}
-
-{\large{}{}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% BIBLIOGRAFIA %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%}{\large\par}}{\large\par}
-
-{\large{}{}\cleardoublepage}{\large\par}
+{\large{}\cleardoublepage}{\large\par}
 
 {\large{}{}% Las siguientes dos instrucciones es todo lo que necesitas
 % para incluir las citas en la memoria
   \bibliographystyle{abbrv}
-\bibliography{memoria}
+\bibliography{../../Downloads/MemoriaTFG-JavierBaosMora-master/memoria}
  % memoria.bib es el nombre del fichero que contiene
 % las referencias bibliográficas. Abre ese fichero y mira el formato que tiene,
 % que se conoce como BibTeX. Hay muchos sitios que exportan referencias en
@@ -1623,5 +1606,15 @@ mas potentes.}{\large\par}
 % y verás que lo puedes hacer de manera sencilla.
 % Más información: 
 % http://texblog.org/2014/04/22/using-google-scholar-to-download-bibtex-citations/}{\large\par}
-{document}}{\large\par}
+}{\large\par}
+
+{\large{}{}https://grafana.com/}{\large\par}
+
+{\large{}{}https://graphiteapp.org/}{\large\par}
+
+{\large{}{}https://www.dell.com/es-es}{\large\par}
+
+{\large{}{}https://www.djangoproject.com/}{\large\par}
+
+{\large{}{}https://www.w3schools.com/}{\large\par}
 \end{document}
